src/objects/Case_Record__c.object
<CustomObject>
    <fields>
        <fullName>Current_Health_Condition__c</fullName>
        <inlineHelpText>As of this moment, would you say your health is: (excellent, very good, good, fair, poor, don’t know)</inlineHelpText>
        <label>Current Health Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Medications_Taken__c</fullName>
        <inlineHelpText>Enter list of medications.</inlineHelpText>
        <label>Current Medications Taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Currently_Attending_Classes__c</fullName>
        <inlineHelpText>Currently attending classes (GED preparation, ESL, pre-employments courses, job training, computer courses, literacy classes)</inlineHelpText>
        <label>Currently Attending Classes</label>
        <picklist>
            <picklistValues>
                <fullName>GED preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Employment Courses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer courses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literacy classes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currently_on_FHC_Waitlist__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the participant is currently on the FHC waitlist</inlineHelpText>
        <label>Currently on FHC Waitlist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Assigned__c</fullName>
        <inlineHelpText>Date the case record was assigned to the advocate.</inlineHelpText>
        <label>Date Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Describe_Apptetite_Change__c</fullName>
        <label>Describe Apptetite Change</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Child_s_Relationship_w_Abuser__c</fullName>
        <inlineHelpText>i.e. were they the primary caregiver, favored child, etc.</inlineHelpText>
        <label>Describe Child&apos;s Relationship w/ Abuser</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Child_s_Romantic_Relationship__c</fullName>
        <label>Describe Child&apos;s Romantic Relationship</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Getting_Along_Concerns__c</fullName>
        <label>Describe Getting Along Concerns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Parent_s_Relationship_with_Chil__c</fullName>
        <inlineHelpText>How would you describe your relationship with your child?</inlineHelpText>
        <label>Describe Parent&apos;s Relationship with Chil</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_School_Childcare_Concerns__c</fullName>
        <label>Describe School/ Childcare Concerns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Sleep_Habit_Problems__c</fullName>
        <label>Describe Sleep Habit Problems</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Child_s_Personality__c</fullName>
        <label>Description of Child&apos;s Personality</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Injury__c</fullName>
        <label>Description of Injury</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_participant_have_limited_English__c</fullName>
        <formula>TEXT( Contact__r.Does_participant_have_limited_English__c)</formula>
        <inlineHelpText>Pulling info from related Contact Record</inlineHelpText>
        <label>Does participant have limited English?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Level__c</fullName>
        <formula>TEXT(Contact__r.Education_Level__c)</formula>
        <label>Education Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_for_TANF__c</fullName>
        <label>Eligible for TANF?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Information__c</fullName>
        <label>Emergency Contact Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employment_Amount__c</fullName>
        <label>Employment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employment_Amt_at_EXIT__c</fullName>
        <label>Employment Amt at EXIT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employment_Status_at_RECENT_INCIDENT__c</fullName>
        <inlineHelpText>Enter the status at most recent incident so that it can be compared to the participant&apos;s current employment status.</inlineHelpText>
        <label>Employment Status at RECENT INCIDENT</label>
        <picklist>
            <picklistValues>
                <fullName>Employed Full Time (includes Self-Employed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed Part-Time (includes Self-Employed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Employed, Seeking Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Employed, NOT Seeking Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Employed, Unable to Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currently Attending School or Employment/Vocational Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enough_Medication_with_You__c</fullName>
        <label>Enough Medication with You?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exit_Advocate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to advocate for the exit stage of the case record.</description>
        <inlineHelpText>Lookup to advocate for the exit stage of the case record.</inlineHelpText>
        <label>Exit Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Records (Exit Advocate)</relationshipLabel>
        <relationshipName>Exit_Case_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exit_Date__c</fullName>
        <label>Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_Status_Flag__c</fullName>
        <description>Exit Status flag based on the checklist. DO NOT USE ON LAYOUT.</description>
        <label>Exit Status Flag</label>
        <summarizedField>Checklist__c.Exit_Status_Flag__c</summarizedField>
        <summaryForeignKey>Checklist__c.Case_Record__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Exit_Status__c</fullName>
        <description>Looks at the field &quot;Exit Status Flag&quot; and returns a colored flag based on the numerical value. 0=Red, 1=Yellow, 2=Green.</description>
        <formula>CASE (Exit_Status_Flag__c, 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000GmsY&quot;,&quot;Red&quot;), 
1,IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000Gmsa&quot;,&quot;Yellow&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000GmsQ&quot;,&quot;Green&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Explain_Cultural_Needs__c</fullName>
        <label>Explain Cultural Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Explain_Dietary_Needs__c</fullName>
        <label>Explain Dietary Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Explain_Obstacles_While_at_NB__c</fullName>
        <inlineHelpText>Based on the Primary and Secondary obstacles chosen, explain in more detail about the specifics</inlineHelpText>
        <label>Explain Obstacles While at NB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Explain_Religious_Needs__c</fullName>
        <label>Explain Religious Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Explaination_of_Physical_Problems_Concer__c</fullName>
        <label>Explaination of Physical Problems/Concer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Family_Doctor_or_Clinic_Name__c</fullName>
        <inlineHelpText>Enter the name of the doctor or clinic</inlineHelpText>
        <label>Family Doctor or Clinic Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_impressions_of_shelter__c</fullName>
        <description>Which of these choices describe the participant&apos;s first impressions of the shelter? Select all that apply.</description>
        <inlineHelpText>Which of these choices describe the participant&apos;s first impressions of the shelter? Select all that apply.</inlineHelpText>
        <label>First impressions of shelter</label>
        <picklist>
            <picklistValues>
                <fullName>Participant felt welcomed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comfortable space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcoming environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respectful treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of the above</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Forms_Status_Flag__c</fullName>
        <description>Forms status flag based on checklist. DO NOT USE ON LAYOUT</description>
        <label>Forms Status Flag</label>
        <summarizedField>Checklist__c.Forms_Status_Flag__c</summarizedField>
        <summaryForeignKey>Checklist__c.Case_Record__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Forms_Status__c</fullName>
        <formula>CASE (Forms_Status_Flag__c, 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000GmsY&quot;,&quot;Red&quot;),
1,IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000Gmsa&quot;,&quot;Yellow&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000GmsQ&quot;,&quot;Green&quot;))</formula>
        <label>Forms Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_Age__c</fullName>
        <formula>Contact__r.Formula_Age__c</formula>
        <label>Formula Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frequency_Abuse_Witnessed_by_Child__c</fullName>
        <label>Frequency Abuse Witnessed by Child</label>
        <picklist>
            <picklistValues>
                <fullName>No Abuse Witnessed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 times a Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GPS_Tools_Competency__c</fullName>
        <label>GPS Tools Competency</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>General_Assistance_Amount__c</fullName>
        <label>General Assistance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>General_Assistance_Amt_at_EXIT__c</fullName>
        <label>General Assistance Amt at EXIT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goals_Not_Met__c</fullName>
        <description>Goals that were not selected/met for the case record.</description>
        <inlineHelpText>Goals that were not selected/met for the case record.</inlineHelpText>
        <label>Goals Not Met</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HMIS_Safe_Harbors_ID__c</fullName>
        <description>Unique HMIS / Safe Harbors ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique HMIS / Safe Harbors ID. HMIS / Safe Harbors ID is always a 7-digit number. No letters or symbols. Participants are typically entered into HMIS / Safe Harbors as soon as possible after intake.</inlineHelpText>
        <label>HMIS / Safe Harbors ID</label>
        <length>7</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Helpline_Lead_Source__c</fullName>
        <description>This field will pre-populate with the value from the Helpline / Client, but can be edited if needed.</description>
        <inlineHelpText>This field will pre-populate with the value from the Helpline / Client, but can be edited if needed.</inlineHelpText>
        <label>Helpline Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_of_Asthma__c</fullName>
        <label>History of Asthma</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>History_of_Diabetes__c</fullName>
        <label>History of Diabetes</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>History_of_Heart_Disease__c</fullName>
        <label>History of Heart Disease</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>History_of_High_Blood_Pressure__c</fullName>
        <label>History of High Blood Pressure</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>History_of_Seizures_Epilepsy__c</fullName>
        <label>History of Seizures/Epilepsy</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>History_of_Ulcers__c</fullName>
        <label>History of Ulcers</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Holidays_Celebrating_while_at_NB__c</fullName>
        <inlineHelpText>What holidays are you going to be celebrating here at New Beginnings?</inlineHelpText>
        <label>Holidays Celebrating while at NB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Homeless__c</fullName>
        <formula>TEXT(Contact__r.Homeless__c)</formula>
        <inlineHelpText>Is participant Homeless? Value from their Contact record.</inlineHelpText>
        <label>Homeless?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>npo02__Household__c</referenceTo>
        <relationshipLabel>Case Records</relationshipLabel>
        <relationshipName>Case_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Housing_Situation_AT_EXIT__c</fullName>
        <description>What housing situation did the participant exit into?</description>
        <inlineHelpText>What housing situation did the participant exit into?</inlineHelpText>
        <label>Housing Situation AT EXIT</label>
        <picklist>
            <picklistValues>
                <fullName>Found permanent housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Found transitional housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved to (another) shelter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved to care facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned to previous situation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintained safe housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Abuser_Disciplined_Child__c</fullName>
        <inlineHelpText>How, if at all, did the abuser discipline your child?</inlineHelpText>
        <label>How Abuser Disciplined Child</label>
        <picklist>
            <picklistValues>
                <fullName>Physical / Corporeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timeout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grounding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withholding of Toys/Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abuser did not Discipline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_Child_Resolves_Conflict__c</fullName>
        <inlineHelpText>How does your child resolve conflict?</inlineHelpText>
        <label>How Child Resolves Conflict</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_Child_was_Disciplined_over_Develpmt__c</fullName>
        <inlineHelpText>How have you disciplined your child over the course of his/her development?</inlineHelpText>
        <label>How Child was Disciplined over Develpmt</label>
        <picklist>
            <picklistValues>
                <fullName>Physical / Corporeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time-Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withholding of Toys/Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grounding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Discipline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_Participant_Heard_of_NB_Other__c</fullName>
        <label>How Participant Heard of NB Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_Participant_Heard_of_NB__c</fullName>
        <label>How Participant Heard of NB</label>
        <picklist>
            <picklistValues>
                <fullName>Previous NB Participant (Self)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NB Participant referred them</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NB Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Advoc - Other Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crisis Line /Clinic - Non DV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DV Hotline - other Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other DV Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Service Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV / Radio / Newspaper / Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Police</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor / Medical Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Street / Stranger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapist / Counselor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend / Neighbor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faith-Based Org / Religious Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_long_Homeless_this_last_time__c</fullName>
        <label>How long Homeless this last time?</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 months - 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10+ years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_long_since_last_PHYSICAL_abuse__c</fullName>
        <label>How long since last PHYSICAL abuse?</label>
        <picklist>
            <picklistValues>
                <fullName>Never Physically Abused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 months - 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than a Year ago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_long_since_last_abuse__c</fullName>
        <description>How Long since the Participant was last physically abused?</description>
        <inlineHelpText>How Long since the Participant was last physically abused?</inlineHelpText>
        <label>How long since last abuse?</label>
        <picklist>
            <picklistValues>
                <fullName>1 month – 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 months – 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 months – 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than a Year Ago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never Physically Abused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_long_since_last_incident__c</fullName>
        <description>How long has it been since the participant has been involved in a physical abuse incident?</description>
        <inlineHelpText>How long has it been since the participant has been involved in a physical abuse incident?</inlineHelpText>
        <label>How long since last incident?</label>
        <picklist>
            <picklistValues>
                <fullName>Within the last month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 months - 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than a year ago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never physically abused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Discontinued_Services_WHY__c</fullName>
        <inlineHelpText>If the Reason for Exit was &quot;NB Requested Participant Discontinue Services&quot; or &quot;Participant declined further services&quot;, enter the reason why.</inlineHelpText>
        <label>If Discontinued Services, WHY?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_not_this_shelter_what_options__c</fullName>
        <description>What would the participant have done if she was not able to stay at the NB shelter?</description>
        <inlineHelpText>What would the participant have done if she was not able to stay at the NB shelter?</inlineHelpText>
        <label>If not this shelter, what options?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Immigrant_Refugee_New_Arrival__c</fullName>
        <formula>Text( Contact__r.Immigrant_Refugee__c)</formula>
        <inlineHelpText>Pulling info from related Contact Record</inlineHelpText>
        <label>Immigrant/Refugee/New Arrival?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_advocacy_at_shelter__c</fullName>
        <description>How does the participant rate the individual advocacy services she received at shelter?</description>
        <inlineHelpText>How does the participant rate the individual advocacy services she received at shelter?</inlineHelpText>
        <label>Individual advocacy at shelter</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InfoNet_ID__c</fullName>
        <description>Unique InfoNet Id for Participant.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique InfoNet Id for Participant. InfoNet ID is always a 6-digit number. No letters or symbols. Only CAP and Shelter participant data must be entered into InfoNet.</inlineHelpText>
        <label>InfoNet ID</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>